--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -13,7 +13,7 @@
   flex-direction: column;
 }
 
-.RegisterForm input, button{
+.RegisterForm input, button, select{
   margin: 5px;
   width: 300px;
   height: 30px;
