--- a/client/src/components/Contact.css
+++ b/client/src/components/Contact.css
@@ -6,6 +6,7 @@
 
 .sm-contact-backgroud{
 	/*for 100% height*/
+	width:100vw;
 	height:100vh;
 	/*backgroud color: */
 	background-image: linear-gradient(27deg,#004E95 50%,#013A6D 50%);
