--- a/client/src/components/Usernav.css
+++ b/client/src/components/Usernav.css
@@ -1,8 +1,17 @@
+/* .row{
+    width:90vw;
+    margin:0;
+    padding:0;
+} */
 #go-to-university{
-    width: 500px;
-    margin:10px;
+    width: 45%;
+    margin:2%;
+    background-color: #0A84c6;
+    border-radius :10px;
 }
 #go-to-group{
-    width: 500px;
-    margin:10px;
+    width: 45%;
+    margin:2%;
+    background-color: #0A84c6;
+    border-radius: 10px;
 }
