--- a/client/src/pages/User/User.css
+++ b/client/src/pages/User/User.css
@@ -1,67 +1,89 @@
 *{
-	margin:0;
-	padding:0
+    margin:0;
+    padding:0;
 }
-.first{
-	Display:flex;
-	 flex-wrap: wrap;
-/* 	 background-color:#fcba03; */
-}
-.second{
-
-width:500px;
-height:100vh;
-background-color:#a8d11f
-}
-
-.third{
-
-width:726px;
-height:100vh;
-background-color:#B0B0B0;
-}
-
-.profile{
-	text-align:center;
-	margin-top:20px;
-}
-
-/* .pimg{
-	width:150px;
-	height:150px;
-	border-radius:50%;
-	background-color:#909090;/* #03c2fc; *//*
-	margin-top:20px;
-	margin-left:170px;
-} */
-.edit{
-	display:flex;
-	width:90%;
-	height:150px;
-	/* background-color:blue; */
-	margin-left:35px;
-	margin-top:20px;
-}
-.bt1{
-background-color:#4caf50;
-height:50px;
-border:none;
-margin-left:80px;
-margin-top:50px;
-width:130px;
-cursor:pointer;
-border-radius:5px;
-color:white;
+.sm-profile-container{
+    display:grid;
+    grid-template-rows: 100vh  ;
+    /* grid-template-columns:1fr 1.5fr; */
+	   grid-template-columns: repeat(auto-fit,minmax(300px,1fr));   
+      /* grid-template-columns:1fr 1.5fr;
+      grid-auto-columns:auto;
+      grid-auto-columns:minmax(300px,1fr); */
+      
+     
+     
+     grid-auto-rows: 50vh;
+   
 
 }
-.bt2{
-	height:50px;
-	background-color:red;
-	border:none;
-	margin-left:50px;
-margin-top:50px;
-width:130px;
-cursor:pointer;
-border-radius:5px;
-color:white;
+.sm-profile-section1{
+    background-color:#a8d11f;
+    display:grid;
+   place-items:center;
+  
+   
+}
+.sm-profile-section2{
+    background-color:#B0B0B0;
+   
+    
+    
+}
+.sm-profile-center{
+    /* background-color:white; */
+    width:90%;
+    height:90vh;
+
+}
+.sm-profile{
+    margin-left:35%;
+    font-size: 1.5rem;
+    margin-top:2%;
+}
+ .sm-profile-img{
+    width:190px;
+     height:190px; 
+     border-radius:50%;
+     
+} 
+.sm-profile-img-div{
+    margin-left: 30%;
+     margin-top: 5%;
+     margin-bottom:5%;
+}
+#sm-profile-heading{
+    font-size:3rem;
+}
+.sm-profile-edit{
+    /* background-color:cyan; */
+    height:50%;
+    /* display:flex;
+   flex-direction: column; */
+    /* grid-gap: 10%; */
+    
+}
+.sm-p-delete{
+    background-color:red;
+    margin-left: 10%;
+    margin-top: 10%;
+    height:4rem;
+    width:11rem;
+    border-radius:2rem; 
+    border:none;
+    cursor:pointer;
+    color:white;
+   
+
+}
+.sm-p-edit{
+    background-color:#4caf50;
+    margin-left: 10%;
+    margin-top: 10%;
+    height:4rem;
+    width:11rem;
+    border-radius:2rem;
+    border:none;
+    cursor:pointer;
+    color:white;
 }
