university page modify user interface modify login register button

--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -22,4 +22,9 @@
 
 .RegisterForm button:hover{
   cursor: pointer;
+  background-color: #0A84c6;
+}
+.RegisterForm button{
+  background-color: #0A84c6;
+  border-radius: 1rem;
 }
