--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -18,8 +18,17 @@
   width: 300px;
   height: 30px;
   font-size: 20px;
+  
 }
 
 .LoginForm button:hover{
   cursor: pointer;
+  
 }
+
+.LoginForm  button{
+  background-color: #0A84c6;
+  border-radius: 1rem;
+}
+
+
