dynamic university, link fixed on home page, post render on web page

--- a/client/src/components/Usernav.css
+++ b/client/src/components/Usernav.css
@@ -1,17 +1,22 @@
-/* .row{
-    width:90vw;
+.row{
+    width:100vw;
     margin:0;
     padding:0;
-} */
+} 
 #go-to-university{
     width: 45%;
-    margin:2%;
+    margin:5%;
     background-color: #0A84c6;
     border-radius :10px;
 }
 #go-to-group{
     width: 45%;
-    margin:2%;
+    margin:5%;
     background-color: #0A84c6;
     border-radius: 10px;
+}
+.container {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
