--- a/client/src/components/Usernav.css
+++ b/client/src/components/Usernav.css
@@ -1,22 +1,48 @@
-.row{
-    width:100vw;
+.sm-usernav-row{
+    display:flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+}
+.sm-userav-container{
+    width:100%;
+    background-color:#013A6D ;
+}
+.sm-usernav-row >div {
+    flex: 1; 
+    width: 100%;  
+
+} 
+
+
+
+#sm-usernav-university-btn{
+    width: 100%;
+    /* box-sizing: border-box; */
     margin:0;
     padding:0;
+    background-color:#0A84c6 ;
+}
+#sm-usernav-university-btn{
+    width: 100%;
+    /* box-sizing: border-box; */
+    margin:0;
+    padding:0;
+    background-color:#0A84c6; ;
+    margin-top: 10px;
+    
 } 
-#go-to-university{
-    width: 45%;
-    margin:5%;
-    background-color: #0A84c6;
-    border-radius :10px;
-}
-#go-to-group{
-    width: 45%;
-    margin:5%;
-    background-color: #0A84c6;
-    border-radius: 10px;
-}
-.container {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
+@media (max-width:700px) and (min-width:100px) {
+    
+    .sm-usernav-row{
+        
+        flex-direction:column;
+        
+    }
+
+    .sm-usernav-row >div {
+        flex: 1; 
+        width: 100%;  
+    
+    } 
+
 }
